# ai-craftsman-kb

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: backend-developer.md  frontend-developer.md
.claude/commands/: merge-task.md  next-wave-backend.md  next-wave-frontend.md  next-wave.md  status.md  work-task.md
.claude/tasks/: STATUS.md  credentials.md  operator-guide.md  setup.md  task_01.md  task_03.md  task_04.md  task_06.md  task_08.md  task_09.md  task_10.md  task_12.md  task_16.md  task_17.md  task_18.md  task_19.md  task_21.md  task_25.md  task_26.md  task_27.md  task_29.md  task_30.md  task_31.md  task_32.md  task_36.md  task_37.md  task_38.md  task_39.md  task_40.md  task_41.md  task_42.md  task_43.md  task_44.md  task_45.md  vault.md
.claude/tasks/init_build/: plan.md  task_02.md  task_05.md  task_07.md  task_11.md  task_13.md  task_14.md  task_15.md  task_20.md  task_22.md  (+6 more)
backend/ai_craftsman_kb/: __init__.py  cli.py  cli_output.py  export.py  mcp_server.py  resilience.py  server.py
backend/tests/: conftest.py  test_cli.py  test_cli_output.py  test_config.py  test_db.py  test_export.py  test_extractor.py  test_llm.py  test_mcp_server.py  test_resilience.py  test_server.py  test_usage_tracker.py
config/: filters.yaml  settings.yaml  sources.yaml
config/prompts/: briefing.md  content_filter.md  entity_extraction.md  keyword_extraction.md  source_discovery.md
dashboard/: index.html  package.json  tsconfig.node.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
doc/: credentials.md  manual.md  setup.md
(+133 files in other folders)
