[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/ai_craftsman_kb"]

[project]
name = "ai-craftsman-kb"
version = "0.1.0"
description = "Local-first CLI + dashboard for aggregating and semantically searching AI content"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # CLI
    "click>=8.1",
    "rich>=13.0",
    # HTTP
    "httpx>=0.27",
    # Config + validation
    "pydantic>=2.0",
    "pyyaml>=6.0",
    # Content extraction
    "readability-lxml>=0.8",
    "lxml>=5.0",
    "html2text>=2024.2",
    # LLM / embeddings
    "openai>=1.0",
    "anthropic>=0.34",
    "tiktoken>=0.7",
    # Database
    "aiosqlite>=0.20",
    # Vector store
    "qdrant-client>=1.10",
    # Feed parsing
    "feedparser>=6.0",
    # YouTube
    "youtube-transcript-api>=0.6",
    # API server
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    # MCP server
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
cr = "ai_craftsman_kb.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
